--- a/app/src/main/res/layout/activity_more_information.xml
+++ b/app/src/main/res/layout/activity_more_information.xml
@@ -68,4 +68,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.042" />
 
+    <Button
+        android:id="@+id/button_return_menu"
+        android:layout_width="96dp"
+        android:layout_height="46dp"
+        android:onClick="backmenu"
+        android:text="Return"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
