--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:text="TextView"
+                android:text="Number_of_Moves"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:layout_editor_absoluteX="0dp" />
@@ -119,7 +119,7 @@
                 android:id="@+id/record"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="Personal_Record"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/moves_number"
                 app:layout_constraintTop_toTopOf="parent"
