--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -18,32 +18,63 @@
         app:srcCompat="@android:drawable/btn_default_small" />
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="381dp"
-        android:layout_height="415dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:columnCount="6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.613">
+        app:layout_constraintVertical_bias="0.498"
+        app:rowCount="6">
 
         <TextView
-            android:id="@+id/txtr"
-            android:layout_width="30dp"
+            android:id="@+id/target"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="#0CE643"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_row="3"
+            app:layout_columnSpan="2"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/car1"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="#E60C0C"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:layout_columnSpan="3"
+            app:layout_rowSpan="1" />
+
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:background= "#E60C0C"
+            android:text="car2"
+            app:layout_column="3"
+            app:layout_columnSpan="1"
+            app:layout_row="2"
+            app:layout_rowSpan="3" />
+
+        <TextView
+            android:id="@+id/car3"
+            android:layout_width="50dp"
             android:layout_height="100dp"
             android:background="#E60C0C"
             android:text="CAR1"
             app:layout_column="0"
-            app:layout_row="0" />
+            app:layout_columnSpan="1"
+            app:layout_row="4"
+            app:layout_rowSpan="2" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:background="#0CE643"
-            android:text="car2"
-            app:layout_column="0"
-            app:layout_row="1" />
+
     </androidx.gridlayout.widget.GridLayout>
 
     <ImageView
