--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -18,16 +18,160 @@
         app:srcCompat="@android:drawable/btn_default_small" />
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        app:columnCount="6"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:columnCount="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:rowCount="6">
+        app:layout_constraintVertical_bias="0.724"
+        app:rowCount="7">
+
+
+        <TextView
+            android:id="@+id/pat1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="0"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="1"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="2"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="3"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="4"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#E1F1E576"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="5"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="0"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="1"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="2"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="3"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="4"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="5"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#3CC394"
+            android:text="CAR1"
+            app:layout_column="6"
+            app:layout_columnSpan="1"
+            app:layout_row="6"
+            app:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/target"
@@ -35,9 +179,9 @@
             android:layout_height="50dp"
             android:background="#0CE643"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_row="3"
+            app:layout_column="1"
             app:layout_columnSpan="2"
+            app:layout_row="2"
             app:layout_rowSpan="1" />
 
         <TextView
@@ -46,21 +190,19 @@
             android:layout_height="50dp"
             android:background="#E60C0C"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_row="0"
+            app:layout_column="1"
             app:layout_columnSpan="3"
+            app:layout_row="0"
             app:layout_rowSpan="1" />
-
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="50dp"
             android:layout_height="150dp"
-            android:background= "#E60C0C"
+            android:background="#E60C0C"
             android:text="car2"
             app:layout_column="3"
-            app:layout_columnSpan="1"
-            app:layout_row="2"
+            app:layout_row="1"
             app:layout_rowSpan="3" />
 
         <TextView
@@ -69,11 +211,53 @@
             android:layout_height="100dp"
             android:background="#E60C0C"
             android:text="CAR1"
-            app:layout_column="0"
+            app:layout_column="1"
+            app:layout_row="3"
+            app:layout_rowSpan="2" />
+
+        <TextView
+            android:id="@+id/car4"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="#E60C0C"
+            android:text="CAR1"
+            app:layout_column="1"
+            app:layout_columnSpan="3"
+            app:layout_row="5"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/car5"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:background="#E60C0C"
+            android:text="CAR1"
+            app:layout_column="5"
             app:layout_columnSpan="1"
             app:layout_row="4"
             app:layout_rowSpan="2" />
 
+        <TextView
+            android:id="@+id/car6"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="#E60C0C"
+            android:text="CAR1"
+            app:layout_column="5"
+            app:layout_columnSpan="2"
+            app:layout_row="3"
+            app:layout_rowSpan="1" />
+
+        <TextView
+            android:id="@+id/car6"
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:background="#E60C0C"
+            android:text="CAR1"
+            app:layout_column="6"
+            app:layout_columnSpan="1"
+            app:layout_row="0"
+            app:layout_rowSpan="3" />
 
     </androidx.gridlayout.widget.GridLayout>
 
