--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -178,7 +178,7 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:background="#0CE643"
-            android:text="CAR1"
+            android:text="target"
             app:layout_column="1"
             app:layout_columnSpan="2"
             app:layout_row="2"
