--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -23,10 +23,10 @@
         app:columnCount="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.724"
+        app:layout_constraintVertical_bias="0.69"
         app:rowCount="7">
 
 
@@ -261,14 +261,14 @@
 
     </androidx.gridlayout.widget.GridLayout>
 
-    <ImageView
-        android:id="@+id/bloc3"
-        android:layout_width="105dp"
-        android:layout_height="143dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="556dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="167dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="44dp"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/btn_default_small" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
