--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -20,14 +20,14 @@
     <GridLayout
         android:layout_width="350dp"
         android:layout_height="350dp"
-        app:columnCount="7"
+        android:columnCount="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.69"
-        app:rowCount="7">
+        android:rowCount="7">
 
 
         <TextView
@@ -36,10 +36,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="0"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="0"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat2"
@@ -47,10 +47,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="1"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="1"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat3"
@@ -58,10 +58,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="2"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="2"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat4"
@@ -69,10 +69,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="3"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="3"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat5"
@@ -80,10 +80,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="4"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="4"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat6"
@@ -91,10 +91,10 @@
             android:layout_height="50dp"
             android:background="#E1F1E576"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="5"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="5"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat7"
@@ -102,10 +102,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="0"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat8"
@@ -113,10 +113,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="1"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="1"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat9"
@@ -124,10 +124,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="2"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="2"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat10"
@@ -135,10 +135,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="3"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="3"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat11"
@@ -146,10 +146,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="4"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="4"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat12"
@@ -157,10 +157,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="5"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="5"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/pat13"
@@ -168,10 +168,10 @@
             android:layout_height="50dp"
             android:background="#3CC394"
             android:text="CAR1"
-            app:layout_column="6"
-            app:layout_columnSpan="1"
-            app:layout_row="6"
-            app:layout_rowSpan="1" />
+            android:layout_column="6"
+            android:layout_columnSpan="1"
+            android:layout_row="6"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/target"
@@ -179,10 +179,10 @@
             android:layout_height="50dp"
             android:background="#0CE643"
             android:text="target"
-            app:layout_column="1"
-            app:layout_columnSpan="2"
-            app:layout_row="2"
-            app:layout_rowSpan="1" />
+            android:layout_column="1"
+            android:layout_columnSpan="2"
+            android:layout_row="2"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/car1"
@@ -190,10 +190,10 @@
             android:layout_height="50dp"
             android:background="#E60C0C"
             android:text="CAR1"
-            app:layout_column="1"
-            app:layout_columnSpan="3"
-            app:layout_row="0"
-            app:layout_rowSpan="0" />
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:layout_row="0"
+            android:layout_rowSpan="0" />
 
         <TextView
             android:id="@+id/car2"
@@ -201,9 +201,9 @@
             android:layout_height="150dp"
             android:background="#E60C0C"
             android:text="car2"
-            app:layout_column="3"
-            app:layout_row="1"
-            app:layout_rowSpan="3" />
+            android:layout_column="3"
+            android:layout_row="1"
+            android:layout_rowSpan="3" />
 
         <TextView
             android:id="@+id/car3"
@@ -211,9 +211,9 @@
             android:layout_height="100dp"
             android:background="#E60C0C"
             android:text="car3"
-            app:layout_column="1"
-            app:layout_row="3"
-            app:layout_rowSpan="2" />
+            android:layout_column="1"
+            android:layout_row="3"
+            android:layout_rowSpan="2" />
 
         <TextView
             android:id="@+id/car4"
@@ -221,10 +221,10 @@
             android:layout_height="50dp"
             android:background="#E60C0C"
             android:text="car4"
-            app:layout_column="1"
-            app:layout_columnSpan="3"
-            app:layout_row="5"
-            app:layout_rowSpan="1" />
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:layout_row="5"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/car5"
@@ -232,10 +232,10 @@
             android:layout_height="100dp"
             android:background="#E60C0C"
             android:text="car5"
-            app:layout_column="5"
-            app:layout_columnSpan="1"
-            app:layout_row="4"
-            app:layout_rowSpan="2" />
+            android:layout_column="5"
+            android:layout_columnSpan="1"
+            android:layout_row="4"
+            android:layout_rowSpan="2" />
 
         <TextView
             android:id="@+id/car6"
@@ -243,10 +243,10 @@
             android:layout_height="50dp"
             android:background="#E60C0C"
             android:text="car6"
-            app:layout_column="5"
-            app:layout_columnSpan="2"
-            app:layout_row="3"
-            app:layout_rowSpan="1" />
+            android:layout_column="5"
+            android:layout_columnSpan="2"
+            android:layout_row="3"
+            android:layout_rowSpan="1" />
 
         <TextView
             android:id="@+id/car7"
@@ -254,10 +254,10 @@
             android:layout_height="150dp"
             android:background="#E60C0C"
             android:text="car7"
-            app:layout_column="6"
-            app:layout_columnSpan="1"
-            app:layout_row="0"
-            app:layout_rowSpan="3" />
+            android:layout_column="6"
+            android:layout_columnSpan="1"
+            android:layout_row="0"
+            android:layout_rowSpan="3" />
 
     </GridLayout>
 
