Added a drawable file for the background of the blocks, blocks now have a background with borders

--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -188,7 +188,7 @@
             android:id="@+id/car1"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="CAR1"
             android:layout_column="1"
             android:layout_columnSpan="3"
@@ -199,7 +199,7 @@
             android:id="@+id/car2"
             android:layout_width="50dp"
             android:layout_height="150dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car2"
             android:layout_column="3"
             android:layout_row="1"
@@ -209,7 +209,7 @@
             android:id="@+id/car3"
             android:layout_width="50dp"
             android:layout_height="100dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car3"
             android:layout_column="1"
             android:layout_row="3"
@@ -219,7 +219,7 @@
             android:id="@+id/car4"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car4"
             android:layout_column="1"
             android:layout_columnSpan="3"
@@ -230,7 +230,7 @@
             android:id="@+id/car5"
             android:layout_width="50dp"
             android:layout_height="100dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car5"
             android:layout_column="5"
             android:layout_columnSpan="1"
@@ -241,7 +241,7 @@
             android:id="@+id/car6"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car6"
             android:layout_column="5"
             android:layout_columnSpan="2"
@@ -252,7 +252,7 @@
             android:id="@+id/car7"
             android:layout_width="50dp"
             android:layout_height="150dp"
-            android:background="#E60C0C"
+            android:background="@drawable/block_background"
             android:text="car7"
             android:layout_column="6"
             android:layout_columnSpan="1"
