Current score is available and behaves properly. Game and score resets on win

--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -98,7 +98,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/record2"
+                    android:id="@+id/nb_moves"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Moves"
