--- a/app/src/main/res/drawable/block_background.xml
+++ b/app/src/main/res/drawable/block_background.xml
@@ -3,9 +3,10 @@
     <item>
         <shape android:shape = "rectangle">
             <stroke
-                android:width="4dp"
+                android:width="2dp"
                 android:color="#000000"/>
-            <solid android:color="#F50000"/>
+            <solid android:color="#BF360C"/>
+            <corners android:radius="10dp" />
 
         </shape>
     </item>
@@ -14,9 +15,6 @@
         android:bottom = "4dp"
         android:top="4dp"
         <shape android:shape="rectangle">
-            <stroke
-                android:width="2dp"
-                android:color="#000000"/>
         </shape>
     </item>
 
