--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -171,7 +171,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#00F1E576"
+            android:background="#E1F1E576"
             android:visibility="invisible"
             tools:visibility="invisible" />
 
@@ -315,8 +315,7 @@
             android:layout_rowSpan="1"
             android:layout_column="1"
             android:layout_columnSpan="2"
-            android:radius="10dp"
-            android:background="#F50057" />
+            android:background="@drawable/target_block_background" />
 
         <TextView
             android:id="@+id/car1"
