--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -41,6 +41,7 @@
                     android:layout_width="66dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="loading_previousPuzzle"
                     app:srcCompat="@android:drawable/ic_media_rew"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -76,6 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="loading_nextPuzzle"
                     app:srcCompat="@android:drawable/ic_media_ff"
                     tools:ignore="SpeakableTextPresentCheck" />
             </LinearLayout>
