--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -60,8 +60,8 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="Puzzle"
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/puzzle_number"
@@ -70,8 +70,8 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="1"
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <ImageButton
@@ -116,8 +116,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Moves: "
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/nb_moves"
@@ -125,8 +125,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="TextView"
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -140,8 +140,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Record: "
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/record3"
@@ -149,8 +149,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="--/"
-                        android:textStyle="bold"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -426,5 +426,17 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/pat14"
+        android:layout_width="37dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginBottom="50dp"
+        android:background="#3CC394"
+        android:text="> \n> \n>"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintStart_toStartOf="@+id/gridLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
